security_groups.tf
resource "aws_security_group" "peex1-sg" {
  name        = "peex1-sg"
  description = "Allow HTTP and SSH traffic"
  vpc_id      = aws_vpc.peex1-vpc.id
  
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  tags = {
    Name = "peex1-sg"
  }
}
